area names and fixes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -627,6 +627,7 @@
  disaster_sis_decay.14.c: "Establish harsher Punishments for traitors"
  TD_SIS_Harsher_Punishment_of_Traitors_in_Legatorum: "Harsher Punishments for Traitors"
  decision_sis_decay_reforms_legatorum_title: "Reforms in Legatorum"
+ decision_sis_decay_reforms_legatorum_desc: "Decrepit and overextended needs to be reformed if we want to manage our subjects more effectively."
  SIS_DECAY_Has_Not_Finished_Legatorum_Reforms_tt: "Has not finished Imperial Diplomacy Reforms"
  SIS_DECAY_We_will_reform_the_legatorum_tt: "§GWe will finish Reforming the Legatorum Institutions§!"
  
@@ -642,6 +643,7 @@
  TD_SIS_Unlock_Via_Caroli_tt: "Unlocks \"§PExpand Via Caroli§!\" decision"
  TD_SIS_Unlock_Via_Magreini_tt: "Unlocks \"§PExpand Via Magreini§!\" decision"
  decision_sis_decay_reforms_economy_title: "Institute Economical Reforms"
+ decision_sis_decay_reforms_economy_desc: "Our economical backbone needs to be improved and adapted to the changing political situation."
  SIS_DECAY_Has_Not_Finished_Economical_Reforms_tt: "Has not finished the Economical Reforms"
  SIS_DECAY_has_not_established_new_mint_tt: "Hasn't established a new mint yet."
  SIS_DECAY_has_not_instituted_new_currency_tt: "Hasn't Instituted New Currency yet"
@@ -669,6 +671,7 @@
  SIS_DECAY_Mutually_exclusive_with_16_e_tt: "§RMutually Exclusive with§! §YIncrease taxing for Nobility§! §Rreform.§!" 
  SIS_DECAY_Mutually_exclusive_with_16_f_tt: "§RMutually Exclusive with§! §YDecrease taxing for Nobility§! §Rreform.§!" 
  decision_sis_decay_reforms_administration_title: "Reform Imperial Administration"
+ decision_sis_decay_reforms_administration_desc: "We have to rebuild the administration in a way which allows to manifest our power across our realm."
  SIS_DECAY_has_not_finished_Administration_Reforms_tt: "Has not finished the Administrative Reforms"
  SIS_DECAY_We_will_reform_the_administration_tt: "§GWe will finish Reforming the Administrative Institutions§!"
  
@@ -692,7 +695,8 @@
  SIS_DECAY_Mutually_exclusive_with_17_d_tt: "§RMutually Exclusive with§! §YOutlaw External Contracting§! §Rreform.§!" 
  SIS_DECAY_Mutually_exclusive_with_17_e_tt: "§RMutually Exclusive with§! §YAllow Peasantry to join mercenary formations§! §Rreform.§!" 
  SIS_DECAY_Mutually_exclusive_with_17_f_tt: "§RMutually Exclusive with§! §YKeep Peasantry tied to Land§! §Rreform.§!"
- decision_sis_decay_reforms_mercenaries_title: "The question of Mercenaries in the Empire"
+ decision_sis_decay_reforms_mercenaries_title: "Mercenaries of the Empire"
+ decision_sis_decay_reforms_mercenaries_desc: "The question of the mercenaries is an important one, because it will put an end to banditry and roaming independent armies."
  SIS_DECAY_has_not_finished_Mercenary_Reforms: "Has not finished ascertaining the Mercenary question"
  SIS_DECAY_We_will_reform_the_mercenaries_tt: "§GWe will get mercenaries under control.§!"
  TD_SIS_Finishing_Merc_Reforms_Will_Give_Back_Merc_Recruitment_tt: "§YFinishing all mercenary questions will allow us to recruit Mercenaries again.§!"
@@ -723,9 +727,11 @@
  disaster_sis_decay.22.a: "We should try to establish the old perpetual diet."
  disaster_sis_decay.22.b: "A new institution is needed."
  decision_sis_decay_question_of_diet_title: "Question of Imperial Diet"
+ decision_sis_decay_question_of_diet_desc: "Imperial diet served the emperors for centuries, but we have to decide whether this institution is worthy of our new empire."
  TD_SIS_Call_emergency_diet_tt: "§GWe shall decide the fate of Imperial Diet§!"
  TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks \"§PEstablish Perpetual Diet§!\" decision"
  decision_sis_decay_establish_perpetual_diet_title: "Establish Perpetual Diet"
+ decision_sis_decay_establish_perpetual_diet_desc: "Diet will now convene in a single, unchangeable location, to centralize the power in one place."
  TD_SIS_Establish_Permanent_Diet: "Established Permanent Diet"
  desc_TD_SIS_Establish_Permanent_Diet: "The Tetrarchy has established a permanent diet which will periodically convene in the same location."
  TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks \"§PHold Imperial Diet§!\" decision"
@@ -733,6 +739,7 @@
  TD_SIS_Holding_the_diet: "Holding the Imperial Diet"
  TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks \"§PEstablish Saelian Council§!\" decision"
  decision_sis_decay_establish_saelian_council_title: "Establish Saelian Council"
+ decision_sis_decay_establish_saelian_council_desc: "Saelian council will help us restore the glory of our empire and bring a fresh wind to the ancient empire."
  TD_SIS_Establish_Saelian_Council: "Established Saelian Council"
  TD_SIS_Decay_Block_Pacification_Path_tt: "§RWe will forever lose ability to pacify empire by force§!"
  
