--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -863,6 +863,14 @@
  putnala_area: "Putnala"
 
  mahjipang_area: "Mahjipang"
+ glechao_area: "Glechao"
+ khepeing_area: "Khepeing"
+ thamdana_area: "Thamdana"
+ phaenthua_area: "Phaenthua"
+ khuwran_area: "Khuwran"
+ siangenao_area: "Siangenao"
+ phomkan_area: "Phomkan"
+ leuang_thalay_area: "Leuang Thalay"
  hntaigu_area: "Hntaigu"
  hnyunbi_area: "Hnyunbi"
  dawbiav_area: "Dawbiav"
@@ -922,3 +930,7 @@
  aragsin_area: "Aragsin"
  bosonapan_sea_area: "Bosonapan Sea"
  barfadan_area: "Barfadan"
+
+ illes_de_caterina_area: "Illes de Caterina"
+ eastern_kindulia: "Eastern Kindulia"
+ western_kindulia: "Western Kindulia"
