--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -37,6 +37,7 @@
  makiboh_estuary_modifier: "Makiboh Estuary"
  kharont_estuary_modifier: "Kharont Estuary"
  senphab_estuary_modifier: "Senphab Estuary"
+ dawba_estuary_modifier: "Dawba Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
