--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2790,7 +2790,7 @@
  PROV2789: "2789"
  PROV2790: "2790"
  PROV2791: "2791"
- PROV2792: "Beeldmer"
+ PROV2792: "Tarwemeer"
  PROV2793: "2793"
  PROV2794: "2794"
  PROV2795: "2795"
