zilverpoort rewrite + dev changes

--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -69,7 +69,7 @@
  td_silberhafen.7.a: "Our republic grows"
 
  td_silberhafen.8.t: "Exodus of Nifthemians"
- td_silberhafen.8.desc: "Because of Ehren conquest of Nifthem a lot of refugees started to come to our country to seek refugee. After some time a big community of Nifthemian citizens started to advocate for idea of their own city based on our Silberhafen. They want to name it Zilverpoort and establish their own community there, we can allow it to happen or send them all to Silberhafen to expand it instead."
- td_silberhafen.8.a: "Let them establish Zilverpoort"
+ td_silberhafen.8.desc: "Due to Ehren conquest of Nifthem, a lot of refugees began to emigrate into our lands. After some time a big community of Nifthemian citizens started to advocate for an idea of their own city, similar in governance to Silberhafen. This city, which is called Zilverpoort, can only happen if our administration helps them establish it. We can help them achieve their goal, but we can just relocate them to already existing Ehren city."
+ td_silberhafen.8.a: "Let them establish their haven."
  td_silberhafen.8.b: "Send them to Silberhafen"
  
