--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3384,7 +3384,7 @@
  PROV3383: "Kolau"
  PROV3384: "Yapping"
  PROV3385: "Daifan"
- PROV3386: "3386"
+ PROV3386: "Lerhue Strait"
  PROV3387: "Kumtsek"
  PROV3388: "Saitsek"
  PROV3389: "Santsing"
