--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -172,6 +172,14 @@
  td_ehren_saelianism.11.a: "Support Sigilianists"
  td_ehren_saelianism.11.b: "Force them to compromise"
  td_ehren_saelianism.11.c: "Supports Ehrenists"
+ ehren_saelianism_events_authority_decentralised_sigilianist_tt: "Our provinces will recieve sigilianist based modifier" 
+ ehren_saelianism_authority_decentralised_sigilianists: "Local Sigilianist Organisation"
+ ehren_saelianism_events_authority_centralised_sigilianist_tt: "Our nation will recieve sigilianist based modifier"
+ ehren_saelianism_authority_centralised_sigilianists: "Countrywide Sigilianist Organisation"
+ ehren_saelianism_events_authority_decentralised_ehrenist_tt: "Our provinces will recieve ehrenist based modifier"
+ ehren_saelianism_authority_decentralised_ehrenists: "Local Ehrenist Organisation"
+ ehren_saelianism_events_authority_centralised_ehrenist_tt: "Our nation will recieve ehrenist based modifier"
+ ehren_saelianism_authority_centralised_ehrenists: "Countrywide Ehrenist Organisation"
 
  td_ehren_saelianism.12.t: "Head of Faith Chosen"
  td_ehren_saelianism.12.desc: "With Sigilianists coming victorious from this entire debate, our faith is now officially united under one person."
