Silvestrine Events for stefus

--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -223,3 +223,39 @@
  snaiwatzer_improved_gunmaking_desc: "Our iron and steel being one of the best in the entire Silvestria, or maybe even entire Mysentria, and with echoes of gunpowder warfare getting into our court, we have started to improve our gunmaking, creating one of the most durable guns in our century."
  snaiwatzer_reformed_lawmaking: "Reformed Lawmaking"
  snaiwatzer_reformed_lawmaking_desc: "With relative peace that Cacumuds provided to our lands from the south, and avoiding many wars that have plagued the imperial lands to the north, we had started investing our time into lawmaking more than warfare, and with southern ideas still alive in our country, we created one of more refined law codex in the history of Silvestria."
+ 
+ 
+ silvestrine.1.t: "Great Fire of Rogau"
+ silvestrine.1.desc: " "
+ silvestrine.1.a: "We will Rebuild"
+ silvestrine.1.b: "Ask Emperor for Help"
+ silvestrine.2.t: "Great Fire of Rogau"
+ silvestrine.2.desc: " "
+ silvestrine.2.a: "We have to help them"
+ silvestrine.2.b: "We Will rebuild Rogau as a baroque city"
+ silvestrine.2.c: "We don't have the money"
+ silvestrine.3.t: "Athalhart von Lindenberg"
+ silvestrine.3.desc: " "
+ silvestrine.3.a: "He will serve in the field"
+ silvestrine.3.b: "He will help the high command"
+ silvestrine.3.c: "He will be an advisor to our ruler"
+ silvestrine.4.t: "Upper Magreina floodings"
+ silvestrine.4.desc: ""
+ silvestrine.4.a: "We will rebuild"
+ silvestrine.4.b: "Ask emperor for help"
+ silvestrine.5.t: "Upper Magreina floodings"
+ silvestrine.5.desc: ""
+ silvestrine.5.a: "We have to help them"
+ silvestrine.5.b: "We don't have the money"
+ silvestrine.6.t: "Lichterian Uprising"
+ silvestrine.6.desc: "Nobles from Lichter want more freedom"
+ silvestrine.6.a: "There is no place for self-will in the Empire"
+ silvestrine.6.b: "Your wish is granted"
+ silvestrine.7.t: "Pemenienzimmer"
+ silvestrine.7.desc: ""
+ silvestrine.7.a: "Let's set it up"
+ silvestrine.7.b: "It's too expensive"
+ TD_Pemenienzimmer_province_modifier:0 "Pemenienzimmer"
+ silvestrine.8.t: "Albrecht 'Würfelwerfer' von Schlaufberg"
+ silvestrine.8.desc: ""
+ silvestrine.8.a: "Ego Sum Lex"
