--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -160,7 +160,7 @@
  kriegerstein_magreiner_farmlands: "Magreiner Farmlands"
  kriegerstein_magreiner_farmlands_desc: "Rich and fertile Fluvisols of Magreiner provide not only our people with food, but they are so prosperous that we can export it to other nations inside and outside of the Empire. The most common type of crop is wheat and barley, but growing influx of new world crops plants such as corn made the production more diverse."
  kriegerstein_lichterian_inheritance: "Lichterian Inheritance"
- kriegerstein_lichterian_inheritance_desc: "The events that led up to the prince, and later emperor, Heinrich IV becoming the ruler of duchies of Kriegerstein and Lichter can be tracked down to the marriage of Heinrich II von Kriegerstein and Elizabeth von Lichter, which subsequently granted claims to the duchy of Lichter to von Kriegersteins and susbequently - von Schlaufbergs."
+ kriegerstein_lichterian_inheritance_desc: "The events that led up to the prince, and later emperor, Heinrich IV becoming the ruler of duchies of Kriegerstein and Lichter can be tracked down to the marriage of Heinrich II von Kriegerstein and Elizabeth von Scâffurt, which subsequently granted claims to the duchy of Lichter to von Kriegersteins and susbequently - von Schlaufbergs."
  kriegerstein_imperial_crossroad: "Imperial Crossroad"
  kriegerstein_imperial_crossroad_desc: "City of Hegenstadt is where 2 major imperial roads meet: Via Caroli running from Merkast to Dorschau and Via Magreini which stretches from Bohemia to Granlatz. Thanks to many merchants using this roads, the city became a hub of many goods, people, cultures and ideas."
  kriegerstein_lessons_of_mercenary_wars: "Lessons of Mercenary Wars"
@@ -226,36 +226,39 @@
  
  
  silvestrine.1.t: "Great Fire of Rogau"
- silvestrine.1.desc: " "
+ silvestrine.1.desc: "While it was expected for a city with predominately wooden architecture to experience occasional fires, no one could have predicted how far and fast it can spread.\nOn [GetDate] Anno Imperii, the city experienced the most destructive fire in Sylvestria of the millenium, which by some estimates razed to the ground 80% of the whole city, only leaving occasional churches and towers standing. Those fortunate souls which have survived the inferno now must find salvation in their city council's grace."
  silvestrine.1.a: "We will Rebuild"
- silvestrine.1.b: "Ask Emperor for Help"
+ silvestrine.1.b: "The Vicar will surely help us."
  silvestrine.2.t: "Great Fire of Rogau"
- silvestrine.2.desc: " "
+ silvestrine.2.desc: "While it was expected for a city with predominately wooden architecture to experience occasional fires, no one could have predicted how far and fast it can spread.\nOn [GetDate] Anno Imperii, the city experienced the most destructive fire in Sylvestria of the millenium, which by some estimates razed to the ground 80% of the whole city, only leaving occasional churches and towers standing. Those fortunate souls which have survived the inferno now must find salvation in their city council, which have requested our support in order to rebuild the city."
  silvestrine.2.a: "We have to help them"
  silvestrine.2.b: "We Will rebuild Rogau as a baroque city"
  silvestrine.2.c: "We don't have the money"
  silvestrine.3.t: "Athalhart von Lindenberg"
- silvestrine.3.desc: " "
+ silvestrine.3.desc: "While the gunpowder technology is quickly developing across the continent, only few nations can manage to gain an edge over their enemies, thanks to the brilliant tacticians, stragetists and military engineers, which are able to effectively apply this new innovation not during the training, but in the battlefield. One of those bright minds is Athalhart of the von Lindenberg dynasty, renowned for his use of siege artillery against the foes, being known for serving in the armies of Frederick II von Schlaufberg during the wars against Bogiland, where he helped to construct fortification in Felderia and breach through the Bogilish citadels with ease."
  silvestrine.3.a: "He will serve in the field"
  silvestrine.3.b: "He will help the high command"
  silvestrine.3.c: "He will be an advisor to our ruler"
  silvestrine.4.t: "Upper Magreina floodings"
- silvestrine.4.desc: ""
+ silvestrine.4.desc: "For centuries there were certain places along the river Magreina which were known for periodic floodings and had generally soft soil, which is avoided during construction. However the recent urbanization efforts and have led to many people forced to settle in these areas, to work the land and build new villages, dangerously near the flood terrace. While miry earth is enough of an issue, the year [GetYear] brough the biggest flood of the millenium, causing widespread devastation, taking whole villages down with the stream of the river. Many are now left without homes or a way to sustain themselves, and local princes are seeking salvation for their subjects."
  silvestrine.4.a: "We will rebuild"
- silvestrine.4.b: "Ask emperor for help"
+ silvestrine.4.b: "Ask the emperor for help"
  silvestrine.5.t: "Upper Magreina floodings"
- silvestrine.5.desc: ""
+ silvestrine.5.desc: "For centuries there were certain places along the river Magreina which were known for periodic floodings and had generally soft soil, which is avoided during construction. However the recent urbanization efforts and have led to many people forced to settle in these areas, to work the land and build new villages, dangerously near the flood terrace. While miry earth is enough of an issue, the year [GetYear] brough the biggest flood of the millenium, causing widespread devastation, taking whole villages down with the stream of the river. Many are now left without homes or a way to sustain themselves, and local princes are seeking salvation for their subjects."
  silvestrine.5.a: "We have to help them"
  silvestrine.5.b: "We don't have the money"
  silvestrine.6.t: "Lichterian Uprising"
- silvestrine.6.desc: "Nobles from Lichter want more freedom"
+ silvestrine.6.desc: "Princes and dukes of Lichter always took pride of being the cultural overlords of the middle Magreina. They quickly consolidated the region while it was still considered to be imperial borderlands and held important position in the empire for centuries. Their downfall started with the royal marriage between von Kriegersteins an Scâffurts, ultimately leading to Heinrich IV inheriting both of their duchies. Now they demand more freedoms like they had in the good old days, wishing to once again extert their splendor over the region."
  silvestrine.6.a: "There is no place for self-will in the Empire"
  silvestrine.6.b: "Your wish is granted"
+ silvestrine.6.c: "They deserve some liberties"
+ LIH_became_free: "Gained Liberties"
  silvestrine.7.t: "Pemenienzimmer"
- silvestrine.7.desc: ""
+ silvestrine.7.desc: "The fascination with the orient was always great in the Saelian circles, and often more distant lands were seen as more splendorous and fantastical. With the reconnection of Mysentria to the rest of the world, many now start to import goods across the Pisachaian Ocean, in order to decorate their palaces with exotic material such as porcelain, tapestry and calligraphy. Some members of our court have proposed to redecorate one of the royal palace's chamber in a more eastern style."
  silvestrine.7.a: "Let's set it up"
  silvestrine.7.b: "It's too expensive"
- TD_Pemenienzimmer_province_modifier:0 "Pemenienzimmer"
+ TD_Pemenienzimmer_province_modifier: "Pemenienzimmer"
+ desc_TD_Pemenienzimmer_province_modifier: "This beautifully chamber is decorated in a classical Pemenian style-  or at least how the Mysentrians imagine Hengtua looks like."
  silvestrine.8.t: "Albrecht 'Würfelwerfer' von Schlaufberg"
- silvestrine.8.desc: ""
- silvestrine.8.a: "Ego Sum Lex"
+ silvestrine.8.desc: "The recent history of the Saelian Empire didnt' see many powerful emperors, and especially not that influential as Albrecth von Schlaufberg, also known in many places as Albrecth 'the Dice Thrower', or Albrecht 'the Brute' by his enemies, trying to undermine his unending patronage of arts.\n\nHe earned the title of würfelwerfer by often placing his own wellbeing and wealth on the scales, risking their loss in order to ensure the continuation of the imperial ideas across the continent. His tactical mind allowed him to quickly defeat the Lichterian uprising and His diplomatic eloquency helped to establish a lasting peace with the tetrarchy. His deeds also include establishment of permanent diet and strenghtening the royal authority in the rural areas, which were mostly governed by independent nobles.\n\nMany are certain, that if not for him, the empire's lifespan would have been shorter by not only decades, but by centuries."
+ silvestrine.8.a: "Ego Sum Lex."
