--- a/localisation/emperor_missions_l_english.yml
+++ b/localisation/emperor_missions_l_english.yml
@@ -1,1 +1,37 @@
 ﻿l_english:
+ DID_NOT_WIN_WAR_AGAINST_IN_YEARS: "Didn't win a war against $TAG|Y$ in the last $IN_YEARS|Y$ year(s)"
+ DID_NOT_WIN_WAR_AGAINST: "Didn't win a war against $TAG|Y$"
+ WON_WAR_AGAINST_IN_YEARS: "Won a war against $TAG|Y$ in the last $IN_YEARS|Y$ year(s)"
+ WON_WAR_AGAINST: "Won a war against $TAG|Y$"
+ GOLDEN_BULL_INSTANT: "$NAME|Y$\n$EFFECT$\nInvest $COST|Y$¤ from the §YCuria Treasury§! and pick this Golden Bull"
+ PAPACY_GOLDEN_BULLS: "Golden Bulls"
+ GOLDEN_BULL_PICKED_TITLE: "Golden Bull Picked"
+ GOLDEN_BULL_PICKED_SETUP: "When the Curia Controller picks a Golden Bull."
+ GOLDEN_BULL_PICKED_HEADER: "$MESSENGER$"
+ GOLDEN_BULL_PICKED_1: "The Curia Controller has picked a Golden Bull!"
+ GOLDEN_BULL_PICKED_2: "$MONARCHTITLE$, by virtue of the powers granted him by God,"
+ GOLDEN_BULL_PICKED_3: "the Pope has decided to bless us enacting the following Golden Bull: "
+ GOLDEN_BULL_PICKED_4: "$BULL$."
+ GOLDEN_BULL_PICKED_5: "This Golden Bull has the following effect: "
+ GOLDEN_BULL_PICKED_6: "$EFFECT$"
+ GOLDEN_BULL_PICKED_LOG: "The Curia Controller picked $BULL$."
+ GOLDEN_BULL_PICKED_BTN1: "OK"
+ GOLDEN_BULL_PICKED_BTN2: "OK"
+ GOLDEN_BULL_PICKED_BTN3: "Go to"
+ DEFENDER_OF_FAITH_NEXT_TIER: "The next Tier of Defender of the Faith will be reached when $COUNTRIES|Y$ nations follow the True Faith"
+ CV_MILITARY_DETACH: "Detach the leader from $ARMY|Y$ in $LOCATION|Y$."
+ CV_MILITARY_DETACH_LEADER_DIALOG_TITLE: "Confirm that you want to detach $NAME$"
+ CV_MILITARY_DETACH_LEADER_DIALOG_DESC: "This will detach $NAME$ from $ARMY|Y$ in $LOCATION|Y$.\n$DESC$"
+ CV_MILITARY_DETACH_LEADER_NOATTACHED: "This leader is not commanding any unit!"
+ CALL_COALITION: "$COUNTRY|Y$ is in a coalition against you. If called co-belligerant all the members of the coalition will be called in the war."
+ CALL_COALITION_ALLY: "$COUNTRY|Y$ is in a coalition against $ALLY$. If called co-belligerant all the members of the coalition will be called in the war."
+ FLAGSHIP_COST: "Flagship cost"
+ REBELSIZE: "An army of $SIZE|Y$ rebels will fight against us."
+ REBELENTRY_OUTLINER: "($SIZE$) $NAME$"
+ NO_POSSIBLE_BUILDINGS_DESC: "More buildings can be unlocked via advancements in technology."
+ APPOINT_CARDINAL_AT_WAR: "§RYou cannot Appoint a Cardinal in Country with whom you are at war.§!"
+ IS_NOT_IN_WAR_TRIGGER_STARTS: "Not in a War"
+ dof_refused_join_war: "Dishonorable Defender of the Faith"
+ defender_of_faith_refused_cta: "Dishonorable Defender of the Faith"
+ COUNTRY_NAME_WILL_CHANGE_IN: "Country name will change to $NAME|Y$."
+ COUNTRY_NAME_WILL_BE_RESTORED: "Country name will be restored to the original value"
