--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -85,7 +85,7 @@
 
  dorchean_labosian_group: "Islander Labosian"
  dorchean: "Dorchean"
- nabhini: "Nabhini"
+ nabhini: "Caidthmoil"
  oileamer: "Oileamer"
  talamgalter: "Talamgalter"
 
