--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -84,7 +84,7 @@
 
  
  wymondian_kingdom_reform: "Wymondian Kingdom"
- wymondian_kingdom_reform_desc: "In kingdom of Argenia ruler has the power to designate their heir to the throne.1"
+ wymondian_kingdom_reform_desc: "In the kingdom of Argenia, the ruler has the power to designate an heir to the throne."
  mechanic_disinherit_less_penalty_yes: "Disinheriting heirs costs 50% less prestige."
 
  union_of_beneul_reform: "Union of Beneul"
@@ -148,3 +148,14 @@
  prices.101.desc: "The increasing exploitation of the seas by the dorcheans and flooding of the continental market has made them addicted to various fish-related products which also include whale oil and meat, ivory, and ambergris. People yearn for the dorchean goods and are willing to pay high prices to get them."
  prices.101.a: "Splendid!"
  BHAITHAR_GP_FISH: "Continental Fish Craze"
+
+ MION_RIOCHTA: "Mion Ríochta"
+ RIOCHTA: "Ríochta"
+ ARD_RIOCHTA: "Ard Ríochta"
+ RITUATHA: "Rítúatha"
+ RUIRI: "Ruirí"
+ ARD_RI: "Ard Rí"
+ BANRIONTUATHA: "Banríontúatha"
+ RUIBANRION: "Ruibanríon"
+ ARD_BANRION: "Ard Banríon"
+
