--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -156,3 +156,6 @@
 
  khumaraati_auxiliaries_reform: "Khumaraati Auxiliaries"
  khumaraati_auxiliaries_reform_desc: "Many Khumaraatis are loyal to the khan and will always serve him to their fullest potential. Many times they were a great help, especially in the wars against Ibliguz and raids in Watlistan."
+
+ dorchean_realm: "Dorchean Realm"
+ dorchean_realm_desc: "The King of the state is elected by the reigning clan members within the family, securing power for the founders of the kingdom."
