--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -157,3 +157,9 @@
  snaiwatz_nation_title: "Unite Snaiwatz @SNA"
  snaiwatz_nation_desc: "We were disunited for too long. Now it's time to unite, so we can focus more on digging."
  all_snaiwatzer_provinces_claims_tt: "§Y[Root.GetName]§! gains a permanent claim on all Snaiwatzer provinces."
+
+ azguramajal_nation_title: "Uniter Azguran People"
+ azguramajal_nation_desc: "We lived under the boot of Yermics for far too long and now it is time to show them whose land this really is."
+
+ anzaqan_nation_title: "Unite the towns"
+ anzaqan_nation_desc: "Maqhazian people of the northern Sahilan coast always lived from trade and fishing in isolate communities and towns. Now it is the time to unite to stand together in an everchanging world."
