--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1488,3 +1488,8 @@
  SOU_ADJ: "Soui Tienan"
  CUA: "Cua Giao"
  CUA_ADJ: "Cua Giaoan"
+
+ AZU: "Azguramajal"
+ AZU_ADJ: "Azguran"
+ ANZ: "Anzaqan"
+ ANZ_ADJ: "Anzaqani"
