--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -54,7 +54,7 @@
  argenia.1.desc: "The sad passing of the late King Sexbald of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
  argenia.1.a: "So be it."
  argenia.1.b: "[Root.monarch.GetName] will keep on fighting!"
- argenia.2.t: ""Death of Sexbald"
+ argenia.2.t: "Death of Sexbald"
  argenia.2.desc: "News are coming from the illegitimate domain of your family. Self-proclaimed king of Argenia - Sexbald - has passed away and the local nobility decided to elect our ruler as the true king of Argenia."
  argenia.2.a: "Excellent."
  argenia.3.t: "Death of Osmund"
@@ -114,11 +114,11 @@
  caidthmor_stories_of_glory: "Stories of Glory"
  caidthmor_stories_of_glory_desc: "The times of our rule of these lands are but a memory, but that doesn't mean that they are gone - they live through our stories, great epic poems and songs, telling the tales of great heroes, sea beasts and lost kingdoms. They remind us of our glory and make our people wishing to bring those times back."
  caidthmor_the_seven_araladh: "The Seven Araladh"
- caidthmor_the_seven_araladh_desc: "The seven great families of Caidthmor hold the majority of the power in the country. Now those remnants of the royalty of the fallen kingdoms once again own their ancestral lands reconquered from Argenia and for that they are forever grateful to the kings of Caidthamor."
+ caidthmor_the_seven_araladh_desc: "The seven great families of Caidthmor hold the majority of the power in the country. Now those remnants of the royalty of the fallen kingdoms once again own their ancestral lands reconquered from Argenia and for that they are forever grateful to the kings of Caidthmor."
  caidthmor_continental_trade: "Continental Trade"
  caidthmor_continental_trade_desc: "Farming in the flatlands can only feed so many people before we have to resort to fishing. Thankfully, our large amounts of expensive goods such as whale oil and fish allow us to not only earn enough to purchase grain but also profit from it."
  caidthmor_the_northern_island: "The Northern Island"
- caidthmor_the_northern_island_desc: "The island of Caidthamor is not only the biggest, but also the most mountainous in the archipelago. Most of the coasts consist of rocky cliffs or deep valleys, making foreign disembarkment incredibly difficult. Even if the enemy manages to reach our island, they have to penetrate the unconquerable castles which scatter the land."
+ caidthmor_the_northern_island_desc: "The island of Caidthmor is not only the biggest, but also the most mountainous in the archipelago. Most of the coasts consist of rocky cliffs or deep valleys, making foreign disembarkment incredibly difficult. Even if the enemy manages to reach our island, they have to penetrate the unconquerable castles which scatter the land."
  caidthmor_wirosepan_resurgence: "Wirosepan Resurgence"
  caidthmor_wirosepan_resurgence_desc: "While citizens of the continent reject the Emperor and embrace sigilianism, people of our islands decided to reembrace Wirosepanism, which elevates Saelius to the status of godhood. This not only brings us a sense of national identity, but also brings us together and strengthens our already powerful bonds."
  caidthmor_integration_of_ehren_minorities: "Integration of Ehren Minorities"
