--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1493,3 +1493,12 @@
  AZU_ADJ: "Azguran"
  ANZ: "Anzaqan"
  ANZ_ADJ: "Anzaqani"
+
+ ARE: "Arei"
+ ARE_ADJ: "Areian"
+ TES: "Tessberraid"
+ TES_ADJ: "Tessberaidan"
+ CRE: "Crenaide"
+ CRE_ADJ: "Crenaidean"
+ BAI: "Bailthuaidh"
+ BAI_ADJ: "Bailthuaidhan"
