--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -207,12 +207,20 @@
  gen_hre_theocracy_house_of_god_desc: "We must ensure that our Lord is properly honored across our lands, in churches worthy of His name."
  gen_hre_theocracy_lords_army_title: "The Lord's Army"
  gen_hre_theocracy_lords_army_desc: "If we do not protect our faith, then no one will. We must build a mighty army to strike fear into the unbelievers!"
+ theocracy_lords_army_mod: "The Lord's Army"
+ desc_theocracy_lords_army_mod:    "Our army stands ready to protect our faith!"
  gen_hre_relations_with_emperor_title: "Relations with the Emperor"
  gen_hre_relations_with_emperor_desc: "As one of the Saelian Empire's smaller nations, we would be well-advised to seek the friendship of the Emperor to secure our continued survival."
  gen_hre_financial_centre_title: "A Center of Commerce"
  gen_hre_financial_centre_desc: "We must fashion [Root.Capital.GetCapitalName] into a center of all manner of commercial activities so that the most talented and wealthiest burghers from across Silvestria choose to settle in our city."
  gen_hre_republic_reform_government_title: "Reform the Administration"
  gen_hre_republic_reform_government_desc: "We must take up new ways and reform our administration into a modern [Root.GovernmentName] if it is to survive the changes sweeping across Mysentria."
+ imperial_beneficience: "Imperial Beneficence"
+ desc_imperial_beneficience: "The Emperor has bestowed many benefits on our city in return for our faithful support of his rule."
+ republic_bourgeois_center: "Bourgeois City"
+ desc_republic_bourgeois_center: "Our city is a center of all manner of commercial activities and draws the most talented and wealthiest burghers from across Germany to settle in it."
+ republic_reformed_government: "Reformed Administration"
+ desc_republic_reformed_government: "We have adopted new ways and reformed our administration into an effective machine for governing our state."
  any_previous_military_mission_complete_tt: "Has completed final military mission"
  any_previous_economic_mission_complete_tt: "Has completed final economic mission"
  td_missions.1.t: "Military Future of [Root.GetName]"
