fixes + map changes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -53,10 +53,10 @@
  upper_nifthem_area: "Upper Nifthem"
  magreinmond_area: "Magreinmond"
  ehrenschap_area: "Ehrenschap"
- west_nifthem_area: "West Nifthem"
+ west_nifthem_area: "East Nifthem"
  endoobdorf_area: "Endoobdorf"
  wydian_tip_area: "Wydian Tip"
- wessburg_area: "Wessburg"
+ wessburg_area: "Apfössheim"
  clarokammen_area: "Clarokammen"
  dezowagner_area: "Dezowagner"
  starluchsem_area: "Starluchsem"
@@ -932,5 +932,8 @@
  barfadan_area: "Barfadan"
 
  illes_de_caterina_area: "Illes de Caterina"
- eastern_kindulia: "Eastern Kindulia"
- western_kindulia: "Western Kindulia"
+ eastern_kindulia_area: "Eastern Kindulia"
+ western_kindulia_area: "Western Kindulia"
+
+ rechland_area: "Rechland"
+ 
