--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -15,7 +15,7 @@
  syvametsa_region: "Syvämetsä"
  indrigerland_region: "Indrigerland"
  arkabil_region: "Arkabil"
- western_camaria_region: "Western Camaria"
+ western_camaria_region: "Finosia"
  eastern_camaria_region: "Eastern Camaria"
  confinia_region: "Confinia"
  fawud_region: "Fawud"
@@ -102,3 +102,4 @@
  mattosan_region: "Mattosan"
  parrout_region: "Parrout"
  bosonapan_coast_region: "Bosonapan Coast"
+ magreinland_region: "Magreinland"
