--- a/localisation/TD_01_flavour_lamedin_l_english.yml
+++ b/localisation/TD_01_flavour_lamedin_l_english.yml
@@ -9,7 +9,7 @@
  lamedin_raqattraf_ships: "Raqattraf Ships"
  lamedin_raqattraf_ships_desc: "Raqattrafs are feared among many nations of the Maqitan, especially the Arkabili and Chilverchians. Their ability to extensively raid and then quickly disperse once the enemy fleet is noticed makes them great at bringing devastation to the coasts of our enemies."
  lamedin_mountainous_respite: "Mountainous Respite"
- lamedin_mountainous_respite_desc: "Mountain chain running across the coast often are high enough that in their upper parts climate is mild enough for people to thrive in. These communities are often remote enough that they are hard to reach for enemy armies and large enough that they cannot be simply ignored."
+ lamedin_mountainous_respite_desc: "The Mountain chains running across the coast often are high enough that in their upper parts climate is mild enough for people to thrive in. These communities are often remote enough that they are hard to reach for enemy armies and large enough that they cannot be simply ignored."
  lamedin_signaling_chains: "Signaling Chains"
  lamedin_signaling_chains_desc: "Despite being dominated by pirates, our coasts are filled with towers ready to shine distant lights, however their purpose is not to guide merchant ships, but to quickly notify the towns of emergencies or enemy fleets. This allows for much quicker organisation of war effort across the country and allowing our sailors to flee."
  lamedin_corsairs_for_hire: "Corsairs for Hire"
