--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -34,3 +34,25 @@
  merc_ghasna_company: "Ghasna Company"
  merc_jhetpalas_company: "Jhetpala's Company"
  merc_pratunu_band: "Pratunu Band"
+
+ merc_sylvenmarker_free_band: "Sylvenmarker Free Band"
+ merc_oddelean_independent_army: "Oddelean Independent Army"
+ merc_ethednan_company: "Ethednan Company"
+ merc_limes_company: "Limes Company"
+ merc_waldmanner: "Waldmänner"
+ merc_sal_servants: "Sal's Servants"
+ merc_mauerzerstorter: "Mauerzerstörer"
+ merc_magreiner_free_army: "Magreiner Free Army"
+ merc_ostemer_independent_army: "Ostemer Independent Army"
+ merc_banna_lachain: "Banna Lachain"
+ merc_amber_guard: "Amber Guard"
+ merc_sons_of_bezyswet: "Sons of Bezyswet"
+ merc_uzkolian_free_army: "Uzkolian Free Army"
+ merc_kite_band: "Kite Band"
+ merc_free_roamers: "Free Roamers"
+ merc_outlaws_of_magilerie: "Outlaws of Magilerie"
+ merc_veteran_cacumudians: "Veteran Cacumudians"
+ merc_yanlan_free_army: "Yanlan Free Army"
+ merc_pamkusean_free_company: "Pamkusean Free Company"
+ merc_vetican_company: "Vetican Company"
+ merc_free_army_of_monne: "Free Army of Monne"
