--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -4,6 +4,7 @@
 
  ansgarland_nation_title: "Restore Kingdom of Ansgarland @ANS"
  ansgarland_nation_desc: "Kingdom of Ansgarland was short-lived state during the middle ages. It was proclaimed after Ansgar, duke of Sylvenmark, conquered the glaser peninsula. Despite existing for only 80 years, it made the way for geoberic culture to emerge and influence this region for years to come."
+ ansgarland_nation_tt: "Inherit every Geoberic Personal Union partner."
 
  bogiland_nation_title: "Restore Kingdom of Bogiland @BOG"
  bogiland_nation_desc: "Restore Bogiland DESC"
