--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -35,6 +35,7 @@
  liemarian_religion_desc: "Liemarianism is the fruit of saelian reformation which was slowly building up since the XIV century. They reject the monarchical approach of Sigilianism and Eneratianism and argue, that the representative of God on earth should be elected by the saelian community. The elements of original Saelian syncretism are still present within liemarianism but more nuanced than in earlier days."
  popolazian: "Popolazian"
  bilohian: "Bilohian"
+ parsaelian: "Parseaelian"
  liemarian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  liemarian_rebels_title: "Religious"
  liemarian_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
